Implementations of typeorm and tsyringe for dependency injection
